--- a/002.CSS학습/05.3DAni/CSS/opendoor.css
+++ b/002.CSS학습/05.3DAni/CSS/opendoor.css
@@ -6,56 +6,150 @@
 /* font-family: 'Comfortaa', cursive; */
 
 /* 초기화 */
-html,body,h1{
-    margin: 0;
-    padding: 0;
+html,
+body,
+h1 {
+	margin: 0;
+	padding: 0;
 }
 
 /* 공사중 */
 body * {
-    outline: 2px dashed rgb(0, 98, 255);
+	outline: 2px dashed rgb(0, 98, 255);
 }
 
-body{
-    background-color: #9c0;
+body {
+	/*  */
+	/*  */
+	background-color: #9c0;
 }
 
 /* 전체 타이틀 */
-.tit{
-    /* height: 50px;
+.tit {
+	/* height: 50px;
     -> auto로 유동적인 글자크기만큼만
     사이즈 주지 말자! */
-    font-family: 'Comfortaa', cursive;
-    /* 최대글자크기 지정 */
-    font-size: min(5vw,42px);
-    margin: 5vh 0;
-    text-align: center;
-    color: #fff;
-    text-shadow: 2px 2px 2px #222;
-    overflow: hidden;
+	font-family: "Comfortaa", cursive;
+	/* 최대글자크기 지정 */
+	font-size: min(5vw, 42px);
+	margin: 5vh 0;
+	text-align: center;
+	color: #fff;
+	text-shadow: 2px 2px 2px #222;
+	overflow: hidden;
 }
 
 /* 전체 랩핑박스 */
-.wrap{
-    padding: 50px 0;
+.wrap {
+	padding: 50px 0;
 }
 /* 전체 문 부모 */
-.cont{
-    width: 400px;
-    height: 600px;
-    margin: 0 auto;
-    background-color: #900;
+.cont {
+	width: 400px;
+	height: 600px;
+	margin: 0 auto;
+	background-color: #900;
 }
 /* 문프레임 */
-.frame{
-    position: relative;
-    top: 18px;
-    width: 350px;
-    height: 580px;
-    margin: 0 auto;
+.frame {
+	position: relative;
+	top: 18px;
+	width: 350px;
+	height: 580px;
+	margin: 0 auto;
 
-    background: url(../images/seashore.jpg)no-repeat center/auto 100%;
+	background: url(../images/seashore.jpg) no-repeat center/auto 100%;
+
+	/********************************* 
+    [ 3D 원근설정 ]
+    
+    1. 세팅위치 : 3D 원근설정을 할 대상의 부모요소
+    
+    2. 설정방법 : perspective 수치
+    -> 수치는 px단위나 구체적인 상대단위(em, rem, vw, vh 등)로 설정
+    -> 기준축으로부터 소실점까지의 거리
+    -> 이 값이 커지면 원근각도가 완만해짐
+    *********************************/
+	perspective: 600px;
 }
 
 /* 문짝 */
-.
+.door {
+	position: relative;
+	width: 350px;
+	height: 580px;
+	background-color: #c90;
+	z-index: 1; /* 엘사보다 위로 오게  */
+
+	/* Y축 회전 */
+	transform: rotateY(0deg);
+	/* 회전축 왼쪽으로 변경 */
+	transform-origin: left;
+
+	/* 애니메이션 */
+	animation:
+        /* 처음에 1초간 바깥쪽으로 열기(끝상태 유지) */
+        first-open-ani 1s ease-in-out forwards,
+		/* 1초간 열기까지 기다린 후, 영원히 여닫기 */
+        open-door-ani 2s ease-in-out 1s infinite alternate;
+
+	/* 처음에 멈춤상태로 애니메이션 세팅 */
+	animation-play-state: paused;
+}
+
+/* .cont에 마우스 오버시 문여닫기 애니작동 */
+.cont:hover .door {
+	animation-play-state: running;
+}
+
+/* 처음 문열기 키프레임 */
+@keyframes first-open-ani {
+	100% {
+		transform: rotateY(60deg);
+	}
+}
+
+/* 문 여닫기 키프레임 */
+@keyframes open-door-ani {
+	0% {
+		transform: rotateY(60deg);
+	}
+	100% {
+		transform: rotateY(-35deg);
+	}
+}
+
+/* 손잡이 */
+.handle {
+	position: absolute;
+	top: calc(50% - 50px / 2);
+	right: 8%;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: blue;
+}
+
+/* 엘사이미지 */
+#elsa img {
+    position: absolute;
+	top: 20%;
+    left: 85%;
+	width: 70%;
+	height: 70%;
+	/* transform-origin: bottom; 발 고정 */
+    transform: rotate(-5deg);
+    overflow: hidden;
+    
+    
+    animation:
+    elsa-ani 1s ease-in-out infinite alternate;
+    /* animation-play-state: paused; */
+}
+
+@keyframes elsa-ani {
+    from{
+        transform: rotate(-15deg);
+        transform-origin: bottom;
+    }
+}
