--- a/001.HTML학습/05.Nav_PJ/css/nav03.css
+++ b/001.HTML학습/05.Nav_PJ/css/nav03.css
@@ -40,10 +40,30 @@ body * {
     background-color: #fff;
 }
 /****************1-1. 로고파트****************/
+/* 로고박스 */
+.logo{
+    padding-top: 33px;
+}
+
 /* 로고이미지 */
 .logo img{
     width: 100%;
+    max-width: 145px;   /* 최대크기 지정 */
+    min-width: 120px;   /* 최소크기 지정 */
 }
+/* 두번째이미지 숨기기 */
+.logo img:nth-child(2){
+    display: none;
+}
+/* 오버시 첫번째 이미지 숨기기 */
+#top-area:hover .logo img:nth-child(1){
+    display: none;
+}
+/* 오버시 두번째 이미지 보이기 */
+#top-area:hover .logo img:nth-child(2){
+   display: inline;
+}
+
 /****************1-2. 네비파트****************/
 /* GNB박스 */
 .gnb{
@@ -65,28 +85,152 @@ body * {
 
 /* 상단 영역 오버시 하위메뉴 보이기*/
 #top-area:hover .gnb{
-    height: 360px;
+    height: 412px;
 }
 /* 상단 영역 오버시 상위메뉴 dt>a 글자색 변경*/
 #top-area:hover .gnb dt a {
     color: #222;
 }
 
-
 /* 네비게이션 a요소 공통 */
 .gnb dt a{
     color: #fff;
 }
+
 /* 메뉴 박스 dl */
 .gnb dl{
     padding: 0 34px;
 }
+
 /* 상위메뉴 dt */
 .gnb dt{
     line-height: 110px;
 }
-/* 하위메뉴 dt */
+/* 상위메뉴 dt의 이미지 */
+.gnb dt img{
+    margin-top: 10px;
+    /* 3개의 이미지 모두 숨기기 */
+    display: none;
+}
+/* 처음이미지 보이기 */
+.gnb dt img:nth-child(1){
+    display: inline;
+}
+/* 전체박스에 오버시 첫째이미지 숨기기 */
+#top-area:hover .gnb dt img:nth-child(1) {
+    display: none;
+}
+/* 전체박스에 오버시 둘째이미지 보이기 */
+#top-area:hover .gnb dt img:nth-child(2) {
+    display: inline;
+}
+/* 전체박스에, dl에 오버시 둘째이미지 숨기기 */
+#top-area:hover .gnb dl:hover dt img:nth-child(2) {
+    display: none;
+}
+/* 전체박스에, dl에 오버시 셋째이미지 보이기 */
+#top-area:hover .gnb dl:hover dt img:nth-child(3) {
+    display: inline;
+}
+
+
+/* 상위메뉴 dd */
 .gnb dd{
     line-height: 45px;
 }
+/* 마우스 오버시 글자 빨갛게 */
+#top-area .gnb dl:hover dt a, /* 상위 메뉴는 dl에 오버시로 설정 */
+/* #top-area를 안넣으면 우선순위에서 밀려서 효과가 안나옴 */
+.gnb dd a:hover     /* 하위메뉴 빨갛게는 a에 바로 오버시로 설정 */
+{
+    color: red;
+}
+
 /****************1-3. 기타파트****************/
+.lang {
+    display: flex;          /* 가로로 흐르게 */
+    padding-top: 40px;
+}
+/* 박스 리스트 */
+.lang li{
+    padding: 0 10px;
+}
+.lang a{
+    color: #fff;    /* 글자색 흰색 */
+}
+/* 두번째 li의 KOR 글자 가상요소로 a에 넣기 */
+.lang li:nth-child(2) a::after{
+    content: 'KOR';
+    font-size: 13px;
+    display: block;
+    margin-top: -15px;
+    margin-left: 17px;
+}
+/* 세번째 li의 STORE 글자 가상요소로 a에 넣기 */
+.lang li:nth-child(3) a::after{
+    content: 'Lang';
+    font-size: 13px;
+    display: block;
+    margin-top: -15px;
+    margin-left: 17px;
+}
+
+/* 박스 이미지 */
+.lang img{
+    height: 30px;
+}
+
+
+
+/********* 오버시 이미지변경 + 글자색변경 *********/
+
+.lang li:nth-child(1)~li img{
+/* 대상 요소는 li 중 첫번째 다음(틸드(~)) li 형제요소들을 선택함 */
+    display: none;
+/* 2,3번째 li 하위 이미지 모두 안보이게 함 */
+}
+
+/* 대상 이미지 중 첫번째 보이게 함 */
+.lang li:nth-child(1)~li img:nth-child(1){
+    display: inline;
+}
+
+/* 최상위박스 오버시 첫번째 이미지 숨기기 */
+#top-area:hover .lang li:nth-child(1)~li img:nth-child(1){
+    display: none;
+}
+
+/* 최상위박스 오버시 두번째 이미지 보이기 */
+#top-area:hover .lang li:nth-child(1)~li img:nth-child(2){
+    display: inline;
+}
+
+/* 최상위 박스 오버시, 동시에 a요소 오버시 두번째 이미지 숨기기 */
+#top-area:hover .lang li:nth-child(1)~li a:hover img:nth-child(2) {
+    display: none;
+}
+
+/* 최상위 박스 오버시, 동시에 a요소 오버시 세번째 이미지 보이기 */
+#top-area:hover .lang li:nth-child(1)~li a:hover img:nth-child(3) {
+    display: inline;
+}
+
+
+/* 최상위 오버시 글자색 */
+#top-area:hover .lang a{
+    color: #222;
+}
+/* 최상위 오버시 동시에 a오버시 글자색 빨강 */
+#top-area:hover .lang a:hover{
+    color: red;
+}
+
+
+/* 타이틀 글자 */
+.tit{
+    position: fixed;
+    left: 5vw;
+    top: 20vw;
+    font-size: 4vw;
+    color: #fff;
+}
