--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
@@ -34,7 +34,7 @@
 /* .gnb ul li {} */
 
 /* GNB a링크 */
-.gnb ul a{
+.gnb ul li a{
     display: block;
     padding: 0 13px;
 
@@ -47,6 +47,98 @@
     color: red;
 }
 
+/* 상위메뉴 서브가 있는 리스트 선택하기 4~6까지(드라마 연예오락 인사이트)*/
+/* a요소 오버시 커서 변경 */
+.gnb ul>li:nth-child(3) ~ li:nth-child(-n+6)>a{
+    /* 손가락표시 변경하기 */
+    cursor: default;    /* 커서는 오버시 커서모양을 변경하는 속성 */
+}
+/* 가상요소로 아래쪽 화살표 넣기 */
+.gnb ul>li:nth-child(3) ~ li:nth-child(-n+6)>a::after{
+    content: 'v';
+    display: inline-block;  /* 트랜스폼은 inline에서는 적용안됨 */
+    font-size: 7px;
+    margin-left: 8px;
+    vertical-align: 3px;
+    transform: scaleX(2);
+}
+
+/* 서브메뉴 */
+.smenu{
+    position: absolute;
+    left: 0;            /* 부모: 보이는 화면 */
+    width: 100%;
+    z-index: 1;
+    background-color: #fff;
+    max-height: 0px;  /* 최대높이값 0 */
+    overflow: hidden;   /* 서브메뉴 숨기기 */
+    transition: .4s;    /* 트랜지션 */
+}
+/* 상위메뉴 오버시 서브메뉴 보이기 */
+.gnb>ul>li:hover .smenu {
+    max-height: 50vh;
+}
+/* 서브속박스 */
+.swrap {
+    width: 60vw;
+    margin: 0 auto;
+    padding: 4.9rem 12.8rem 6rem;
+    white-space: nowrap;
+}
+
+/* ol리스트 */
+.smenu ol{
+    display: flex;      /* 플렉스박스 */
+    flex-wrap: wrap;    /* 플렉스 랩핑박스 */
+    /* justify-content: center; */
+    /* 플렉스박스 간격속성 : gap(위아래, 양쪽 - 하나만 쓰면 모두세팅) */
+    gap: 1rem 2vw;
+}
+/* 서브타이틀 */
+.smenu h2{
+    font-size: 3rem;
+}
+
+
 /************* 2. 메인영역 *************/
+/* 2-1. 배너영역 */
+
+/* 슬라이드 박스 */
+.slide-box{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+/* 슬라이더 */
+.slider{
+    position: relative;
+    left: 0;        /* 슬라이드 위치이동 초기값 */
+    display: flex;  /* 하위 li를 옆으로 흐르게 함 */
+    width: 100%;
+    height: 100%;
+}
+.slider li{
+    flex-basis: 100%;
+    flex-shrink: 0;
+    /* 부모크기만큼 옆으로 나가게 하려면 flex-shrink 기본값 1을 0으로 변경한다
+    1의 의미는 자동으로 부모크기에 맞추어 줄어듬
+    0의 의미는 설정된 크기만큼 늘어남 */
+
+    /* 공통배경설정 */
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+}
+/* 슬라이드 01 */
+.snum-01{
+    background-image: url(../images/bg_mainvisual2.jpg);
+}
+
+.snum-02{
+    background-image: url(../images/bg_main_02.jpg);
+}
+.snum-03{
+    background-image: url(../images/bg_main_03.jpg);
+}
 /************* 3. 하단영역 *************/
 
