--- a/002.CSS학습/05.3DAni/CSS/cube.css
+++ b/002.CSS학습/05.3DAni/CSS/cube.css
@@ -11,12 +11,22 @@ body {
     height: 100vh;
 }
 
-/* CSS 변수세팅 */
+/* CSS 변수세팅 
+:root의 의미 -> html:root
+html 요소가 생략되어 표현된것
+-> 변수값 변경 애니가 필요한 경우 이 점을 활용한다.
+html.클래스명:root{변수값 세팅}
+변수값이 특정 클래스로 변경 가능 */
 :root{
     /* 큐브공통크기 */
     --cube-size: 300px;
     /* Z축 거리 나눔수 */
     --divide-num: 2;
+}
+/* root인 html요소에 클래스를 부여하여 변수값을 변경한다. */
+html.on:root{
+/* html.abcabc:root로 해도 됨 */
+    --divide-num: 1.5;
 }
 
 /* 작동버튼 */
@@ -40,8 +50,8 @@ body {
     position: absolute;
     /* 정가운데 정렬 
     -> 50% 민 후, 박스의 절반크기 빼기 */
-    top: calc(50% - var(--cube-size)/var(--divide-num));
-    left: calc(50% - var(--cube-size)/var(--divide-num));
+    top: calc(50% - var(--cube-size)/2);
+    left: calc(50% - var(--cube-size)/2);
     /* 부모 : 보이는 화면 */
     width: var(--cube-size);
     height: var(--cube-size);
@@ -70,6 +80,8 @@ body {
     border: 2px solid #ccc; /* 테두리 */
     box-sizing: border-box; /* 보더, 패딩 포함박스 */
     /* outline: 2px dotted blue; */
+    /* Z축거리 변경에 대한 트랜지션 애니 설정 */
+    transition: .5s;
 }
 
 /* 1. 앞면 */
@@ -145,8 +157,13 @@ body {
     /* 처음에 멈춰있음 */
     animation-play-state: paused;
     /* paused (멈춤상태)
-       running(작동상태-기본값) */
+    running(작동상태-기본값) */
 }
+/* 애니메이션 작동 클래스(.on) */
+.rotate-cube.on {   /* 쩜 붙여쓰면 동시에라는 뜻이고 띄어쓰면 자손중에 라는 뜻임 */
+    animation-play-state: running;
+}
+
 /* 큐브 애니메이션 키프레임 */
 @keyframes cube-ani{
     to{
