--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
@@ -3,6 +3,26 @@
 /* 도깨비 PJ : 공통 모듈 CSS - common.css */
 /* 공유기능 요소 셋팅 */
 
+/* 0. 전체 레이아웃 영역별 세팅
+/* 1. 상단영역 */
+.top-area{
+    height: 120px;
+}
+/* 2. 배너영역 */
+.ban-area{
+    position: relative;
+    /* 부모자격 - .cat-box */
+    height: 680px;
+}
+/* 2.5. 서브파트메뉴 */
+.spart-menu{
+    height: 68px;
+}
+/* 8. 하단영역 */
+.footer-area{
+    height: 371px;
+} */
+
 /************* 1. 상단영역 *************/
 /* 메인로고 */
 .mlogo img{
@@ -140,5 +160,20 @@
 .snum-03{
     background-image: url(../images/bg_main_03.jpg);
 }
+
+/* 캐릭터박스 */
+.cat-box{
+    position: absolute;
+    left: 0%;
+    /* transform: translateX(-50%); */
+    bottom: 0;
+    width: 100%;
+    height: 300px;
+    outline-color: red;
+    background: lightgreen;
+
+}
+
+
 /************* 3. 하단영역 *************/
 
