--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
@@ -21,7 +21,7 @@
 /* 8. 하단영역 */
 .footer-area{
     height: 371px;
-} */
+}
 
 /************* 1. 상단영역 *************/
 /* 메인로고 */
@@ -150,10 +150,10 @@
     background-size: cover;
 }
 /* 슬라이드 01 */
+/* 슬라이드 되게 푸쉬받기 */
 .snum-01{
     background-image: url(../images/bg_mainvisual2.jpg);
 }
-
 .snum-02{
     background-image: url(../images/bg_main_02.jpg);
 }
@@ -161,18 +161,86 @@
     background-image: url(../images/bg_main_03.jpg);
 }
 
-/* 캐릭터박스 */
+/* 캐릭터박스 
+-> 캐릭터 속박스가 있는 공간을 확보해준다.*/
 .cat-box{
     position: absolute;
-    left: 0%;
-    /* transform: translateX(-50%); */
-    bottom: 0;
+    left: 0;
+    bottom: 5%;
+    /* 부모는? .ban-area */
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
     outline-color: red;
-    background: lightgreen;
-
 }
+/* 캐릭터 속박스 - static한 박스(공간차지..한다고) */
+.cat-inbox{
+    /* 플랙스박스(흘러가게) */
+    display: flex;
+    /* 플랙스 자식 사이간격 */
+ /* gap: 위아래 양쪽 */
+    gap: 0 1vw;
+    /* 가로 최대크기 설정 */
+    max-width: 1360px;
+    /* 가로중앙정렬 */
+    margin: 0 auto;
+    /* 양쪽패딩 */
+    padding: 0 1vw;
+}
+/* 캐릭터 개별박스 등분할 */
+.cat-inbox article {
+    flex: 1;
+}
+/* 캐릭터 이미지 박스 */
+.imbx img{
+    width: 100%;
+}
+/* 캐릭터 이름 이미지 박스 */
+.iname{
+    display: block;
+    text-align: center;
+    margin-top: -20%;   /* 앱솔루트 없이 마진으로 상단이미지와 겹치게 하기
+    %의 기준은 마진 주기 전 박스의 세로 크기를 기준으로 한다. */
+}
+/* 캐릭터 이름 이미지 */
+.iname img{
+    width: 40%;
+}
+
+
+
+
+
+/* 마우스 오버시 그림 바꾸기
+1. 두번째 이미지 숨기기
+2. 오버시 두번째 이미지 보이기
+3. 오버시 첫번째 이미지 숨기기 */
+
+/* 내가 한거
+-> 내가 한거는 이름박스 위에서만 적용되는거고 강사님꺼는 마우스를 캐릭터 위에 올리기만 해도 적용됨 (범위가 다름) */
+/* .iname img:last-child{
+    display: none;
+}
+.iname:hover img:last-child{
+    display: inline;
+}
+
+.iname:hover img:first-child{
+    display: none;
+} */
+
+/* 강사님 */
+.iname img:last-child{
+    display: none;
+}
+.cat-inbox article:hover .iname img:last-child{
+    display: inline;
+}
+.cat-inbox article:hover .iname img:first-child{
+    display: none;
+}
+
+
+
 
 
 /************* 3. 하단영역 *************/
