--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -77,28 +77,79 @@ body * {
 /* 2-2. 포스터 메뉴 */
 .poster-menu{
     position: absolute;
-    bottom: 50px;  /* 포스터 위치 밑으로 보냈음 */
-    left: 223px;
+    width: 100%;
+    bottom: 5%;  /* 포스터 위치 밑으로 보냈음 */
+    left: 50%;
+    transform: translateX(-50%);    /* 가로방향 중앙이동 */
     /* 부모는? .main-area */
     /* 한번에 메인영역 하단으로 위치이동 포지셔닝을 하기 위한 최적의 포지션은 absolute다. */
 }
+
 /* 포스터 ul 가상요소 clear */
-.poster-menu ul::after{
+/* .poster-menu ul::after{
     content: '';
     display: block;
     clear: both;
-}
+} */
+
 /* 포스터 리스트 */
-.poster-menu li {   /* li : 리스트 */
-    float: left;    /* 블록요소(포스터사진) 옆으로 흐르게 */
+.poster-menu ul {   /* li : 리스트 */
+    /* float: left; */    /* 블록요소(포스터사진) 옆으로 흐르게 */
+    /* 플렉스박스 */
+    display: flex;
+    /* 하위요소 사이간격 */
+    gap: 0 15px;
 }
-/* list리스트 사이간격 */
-.poster-menu li+li {
-    margin-left: 15px;
+
+/* 상위 ul>li 리스트 */
+.poster-menu>ul>li{
+    position: relative; /* 부모자격 - 영화정보박스 */
+    overflow: hidden;   /* 자식요소인 영화정보박스 숨기기 */
 }
+
 /* 포스터 이미지 */
 .poster-menu img{
-    height: 170px;   /* 포스터 크기가 너무 커서 좀 줄였으 */
+    width: 100%;
+    /* height: 170px; */   /* 포스터 크기 */
+}
+
+/* 영화정보박스 : 오버시 올라올 박스 */
+.mv-info{
+    position: absolute;
+    top: 100%; /* 아래쪽에 나가있음 */
+    /* 부모는? .poster-menu>ul>li */
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    text-align: center;
+    /* 트랜지션 */
+    transition: .3s ease-in-out;
+}
+
+/* 부모li에 오버시 영화정보 박스 올라오기 */
+.poster-menu>ul>li:hover .mv-info {
+    top: 0;
+}
+
+
+/* 영화정보박스 하위 ol */
+.mv-info ol {
+    /* 플렉스 박스 -> 옆으로 흘러가지 않아도 구성요소의 흐름을 제어할 목적으로 줌 */
+    display: flex;
+    /* 플렉스 진행방향 */
+    flex-direction: column;
+    /* 진행방향 정렬 */
+    justify-content: center;
+    /* 부모박스 채우기 */
+    height: 100%;
+    /* 줄바꿈 방지 */
+    white-space: nowrap;
+    /* 글자크기 */
+    font-size: 12px;
+    /* 줄간격 */
+    line-height: 2;
+    /* 배경 반투명 */
+    background-color: #00000098;
 }
 
 /************ 3. 하단영역 ************/
