--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
@@ -5,27 +5,27 @@
 
 /* 0. 전체 레이아웃 영역별 세팅
 /* 1. 상단영역 */
-.top-area{
+.top-area {
     height: 120px;
 }
 /* 2. 배너영역 */
-.ban-area{
+.ban-area {
     position: relative;
     /* 부모자격 - .cat-box */
     height: 680px;
 }
 /* 2.5. 서브파트메뉴 */
-.spart-menu{
+.spart-menu {
     height: 68px;
 }
 /* 8. 하단영역 */
-.footer-area{
+.footer-area {
     height: 371px;
 }
 
 /************* 1. 상단영역 *************/
 /* 메인로고 */
-.mlogo img{
+.mlogo img {
     margin-top: 39px;
 }
 
@@ -39,7 +39,7 @@
     padding: 0 10px;
 }
 /* TOP a링크 */
-.top-menu ul a{
+.top-menu ul a {
     font-size: 1.4rem;
     line-height: 40px;
     font-weight: bold;
@@ -54,7 +54,7 @@
 /* .gnb ul li {} */
 
 /* GNB a링크 */
-.gnb ul li a{
+.gnb ul li a {
     display: block;
     padding: 0 13px;
 
@@ -69,14 +69,14 @@
 
 /* 상위메뉴 서브가 있는 리스트 선택하기 4~6까지(드라마 연예오락 인사이트)*/
 /* a요소 오버시 커서 변경 */
-.gnb ul>li:nth-child(3) ~ li:nth-child(-n+6)>a{
+.gnb ul > li:nth-child(3) ~ li:nth-child(-n + 6) > a {
     /* 손가락표시 변경하기 */
-    cursor: default;    /* 커서는 오버시 커서모양을 변경하는 속성 */
+    cursor: default; /* 커서는 오버시 커서모양을 변경하는 속성 */
 }
 /* 가상요소로 아래쪽 화살표 넣기 */
-.gnb ul>li:nth-child(3) ~ li:nth-child(-n+6)>a::after{
-    content: 'v';
-    display: inline-block;  /* 트랜스폼은 inline에서는 적용안됨 */
+.gnb ul > li:nth-child(3) ~ li:nth-child(-n + 6) > a::after {
+    content: "v";
+    display: inline-block; /* 트랜스폼은 inline에서는 적용안됨 */
     font-size: 7px;
     margin-left: 8px;
     vertical-align: 3px;
@@ -84,18 +84,18 @@
 }
 
 /* 서브메뉴 */
-.smenu{
+.smenu {
     position: absolute;
-    left: 0;            /* 부모: 보이는 화면 */
+    left: 0; /* 부모: 보이는 화면 */
     width: 100%;
     z-index: 1;
     background-color: #fff;
-    max-height: 0px;  /* 최대높이값 0 */
-    overflow: hidden;   /* 서브메뉴 숨기기 */
-    transition: .4s;    /* 트랜지션 */
+    max-height: 0px; /* 최대높이값 0 */
+    overflow: hidden; /* 서브메뉴 숨기기 */
+    transition: 0.4s; /* 트랜지션 */
 }
 /* 상위메뉴 오버시 서브메뉴 보이기 */
-.gnb>ul>li:hover .smenu {
+.gnb > ul > li:hover .smenu {
     max-height: 50vh;
 }
 /* 서브속박스 */
@@ -107,37 +107,36 @@
 }
 
 /* ol리스트 */
-.smenu ol{
-    display: flex;      /* 플렉스박스 */
-    flex-wrap: wrap;    /* 플렉스 랩핑박스 */
+.smenu ol {
+    display: flex; /* 플렉스박스 */
+    flex-wrap: wrap; /* 플렉스 랩핑박스 */
     /* justify-content: center; */
     /* 플렉스박스 간격속성 : gap(위아래, 양쪽 - 하나만 쓰면 모두세팅) */
     gap: 1rem 2vw;
 }
 /* 서브타이틀 */
-.smenu h2{
+.smenu h2 {
     font-size: 3rem;
 }
-
 
 /************* 2. 메인영역 *************/
 /* 2-1. 배너영역 */
 
 /* 슬라이드 박스 */
-.slide-box{
+.slide-box {
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 /* 슬라이더 */
-.slider{
+.slider {
     position: relative;
-    left: 0;        /* 슬라이드 위치이동 초기값 */
-    display: flex;  /* 하위 li를 옆으로 흐르게 함 */
+    left: 0; /* 슬라이드 위치이동 초기값 */
+    display: flex; /* 하위 li를 옆으로 흐르게 함 */
     width: 100%;
     height: 100%;
 }
-.slider li{
+.slider li {
     flex-basis: 100%;
     flex-shrink: 0;
     /* 부모크기만큼 옆으로 나가게 하려면 flex-shrink 기본값 1을 0으로 변경한다
@@ -151,19 +150,19 @@
 }
 /* 슬라이드 01 */
 /* 슬라이드 되게 푸쉬받기 */
-.snum-01{
+.snum-01 {
     background-image: url(../images/bg_mainvisual2.jpg);
 }
-.snum-02{
+.snum-02 {
     background-image: url(../images/bg_main_02.jpg);
 }
-.snum-03{
+.snum-03 {
     background-image: url(../images/bg_main_03.jpg);
 }
 
 /* 캐릭터박스 
 -> 캐릭터 속박스가 있는 공간을 확보해준다.*/
-.cat-box{
+.cat-box {
     position: absolute;
     left: 0;
     bottom: 5%;
@@ -173,11 +172,11 @@
     outline-color: red;
 }
 /* 캐릭터 속박스 - static한 박스(공간차지..한다고) */
-.cat-inbox{
+.cat-inbox {
     /* 플랙스박스(흘러가게) */
     display: flex;
     /* 플랙스 자식 사이간격 */
- /* gap: 위아래 양쪽 */
+    /* gap: 위아래 양쪽 */
     gap: 0 1vw;
     /* 가로 최대크기 설정 */
     max-width: 1360px;
@@ -191,24 +190,20 @@
     flex: 1;
 }
 /* 캐릭터 이미지 박스 */
-.imbx img{
+.imbx img {
     width: 100%;
 }
 /* 캐릭터 이름 이미지 박스 */
-.iname{
+.iname {
     display: block;
     text-align: center;
-    margin-top: -20%;   /* 앱솔루트 없이 마진으로 상단이미지와 겹치게 하기
+    margin-top: -20%; /* 앱솔루트 없이 마진으로 상단이미지와 겹치게 하기
     %의 기준은 마진 주기 전 박스의 세로 크기를 기준으로 한다. */
 }
 /* 캐릭터 이름 이미지 */
-.iname img{
+.iname img {
     width: 40%;
 }
-
-
-
-
 
 /* 마우스 오버시 그림 바꾸기
 1. 두번째 이미지 숨기기
@@ -228,14 +223,13 @@
     display: none;
 } */
 
-/* 강사님 */
-.iname img:last-child{
+.iname img:last-child {
     display: none;
 }
-.cat-inbox article:hover .iname img:last-child{
+.cat-inbox article:hover .iname img:last-child {
     display: inline;
 }
-.cat-inbox article:hover .iname img:first-child{
+.cat-inbox article:hover .iname img:first-child {
     display: none;
 }
 
@@ -246,44 +240,49 @@
     정해진 크기보다 넘치는 세로 스크롤만 생김 */
     background: url(../images/eachBG.jpg) no-repeat bottom/cover;
     /* 트랜지션 */
-    transition: .4s ease-in-out;
+    transition: 0.4s ease-in-out;
 }
 
 /* 상위 캐릭터 개별박스에 오버시 설명박스 보이기 */
 .cat-inbox article:hover .descbx {
-    height: 200px;
+    /* height: 200px; */
+    padding-top: 55%;
+    /* aspect-ratio: 2/1; */
+    border-radius: 10%;
+    margin-top: 7%
 }
-
-/* 상위 캐릭터 개별박스에 오버시
-이미지박스 트랜지션 설명박스와 동일하게 설정하기 */
-.cat-inbox article .imbx{
-    transition: .4s ease-in-out;
+/* 상위 캐릭터 개별박스에 오버시 이미지박스 트랜지션
+  설명박스와 동일하게 설정하기 */
+.cat-inbox article .imbx {
+    transition: 0.4s ease-in-out;
 }
-
-/* 상위 캐릭터 개별박스에 오버시
-이미지박스 마이너스 마진으로 위로 올리기 */
-.cat-inbox article:hover .imbx{
-    margin-top: -200px;
+/* 상위 캐릭터 개별박스에 오버시 이미지박스 마이너스
+  마진으로 위로 올리기 + 캐릭터 타이틀 마진탑 */
+.cat-inbox article:hover .imbx,
+.cat-inbox article:hover .descbx h3 {
+    margin-top: -55%;
 }
-
 /* 캐릭터 타이틀 */
-.descbx h3{
-    font-family: 'Gugi';
-    font-size: 2rem;
+.descbx h3 {
+    margin-top: 0;
+    font-family: "Gugi";
+    /* 글자크기 최대2.4rem, 기타는 2vw */
+    font-size: min(2.4rem, 2vw);
     font-weight: normal;
     padding: 15px 10px 5px;
     letter-spacing: -1px;
+    /* 트랜지션 */
+    transition: margin-top .4s ease-in-out;
 }
-.descbx p{
-    font-family: 'Single Day', 'ZCOOL KuaiLe';
-    font-size: 1.8rem;
+
+.descbx p {
+    font-family: "Single Day", "ZCOOL KuaiLe";
+    /* 글자크기 최대1.8rem, 기타는 1.3vw */
+    font-size: min(1.8rem, 1.3vw);
     line-height: 1.4;
     padding: 1.5em;
     /* 양쪽정렬 */
     text-align: justify;
 }
 
-
-
 /************* 3. 하단영역 *************/
-
