--- a/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -5,20 +5,12 @@
 /* Cute Font, Jua, Audiowide 체 */
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Cute+Font&family=Jua&display=swap');
 /* 
-    font-family: 'Audiowide', cursive;
-    font-family: 'Cute Font', cursive;
-    font-family: 'Jua', sans-serif;
+font-family: 'Audiowide', cursive;
+font-family: 'Cute Font', cursive;
+font-family: 'Jua', sans-serif;
 */
-
-/* 초기화 */
-html, body, h1, h2, ul, ol{
-    margin: 0;
-    padding: 0;
-}
-/* 리스트 초기화 */
-ul, ol{ /* 블릿, 숫자 없앰 : lin */
-    list-style: none;
-}
+/* 리셋CSS 불러오기 */
+@import url(./reset.css);
 
 body {
     background-color: #000000;
@@ -26,17 +18,19 @@ body {
 
 /* 공사중 표시 */
 body * {
-    outline: 2px dashed yellow; /* 두께 종류 색상 */
+    /* outline: 2px dashed yellow; 두께 종류 색상 */
 }
 /* 공통 클래스 */
 /* 파트 공통 */
 .part{
-    width: 1200px;
+    max-width: 1200px;  /* 최대 1200 */
     margin: 0 auto; /* 중앙정렬 */
 }
 
 /************ 1. 상단영역 ************/
 .top-area{
+    position: relative;
+    /* 부모자격 .gnb */
     height: 80px;
     /* 배경이미지 */
     background: url(../images/curtain.jpg) repeat-x;    /* repeat-x : 가로로 반복 */
@@ -48,23 +42,195 @@ body * {
     color: aqua;
     line-height: 80px;
     text-align: center;
+    /* 글자 글로우 효과 */
+    text-shadow: 0 0 4px aquamarine;
+    /* 이시이지반방마 */
+    animation: tit-ani .5s ease-in infinite alternate;
 }
+/* 타이틀 애니 키프레임 */
+@keyframes tit-ani {
+    to {
+        text-shadow: 0 0 12px aquamarine;
+    }
+}
+/* 1-2. GNB메뉴 */
+.gnb{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 999;
+}
+.gnb ul{
+    display: flex;  /* 플렉스박스 */
+    gap: 0 1.5rem;
+    font-family: 'Jua', sans-serif;
+    font-size: 2rem;
+}
+
+/* 상위li */
+.gnb>ul>li{
+    position: relative;
+    /* 부모자격 : .smenu */
+    padding-bottom: 10px;
+    /* 하위메뉴와 연결되게 함. 마우스로 정확하게 짚지 않아도 오버 이벤트가 끊어지지 않게함 */
+}
+.smenu{ /* 서브메뉴 */
+    position: absolute;
+    top: 35px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 145px;
+    /* outline: 2px solid yellow; */
+    /* box-shadow: 0 0 5px #fff; */ /* 네모만 글로우 */
+    /* 모든 외곽선에 그림자(글로우) 효과를 주려면 filter 드랍쉐도우를 사용함 */
+    filter: drop-shadow(0 0 5px #fff);  /* 삼각형까지 글로우.. */
+    border-radius: 5px;
+    font-size: 1.7rem;
+    line-height: 1.6;
+    padding: 3px;
+    background: url(../images/bg_smenu.png) no-repeat center/cover;
+    display: none;  /* 처음에 안보임 */
+}
+/* 상위메뉴 오버시 서브보이기 */
+.gnb ul >li:hover .smenu{
+    display: block;
+}
+/* 가상요소로 삼각형 만들기 */
+.smenu::before{
+    content: '';
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 20px;
+    height: 17px;
+    background-color: #343434;
+    /* 클립패스로 자르기 */
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+}
+
+/* 서브메뉴 ol */
+.smenu ol{
+    border: 1px solid #ccc;
+    padding: 10px;
+    white-space: nowrap;
+}
+
+/* 사이구분선 클래스 */
+.bd-top {
+    border-top: 1px solid #ccc;
+}
+/* 서브메뉴 오버시 글자색 */
+.smenu li:hover a{
+    color:red;
+}
+/* 서브메뉴 오버시 아이콘 */
+.smenu li:hover a::after{
+    float: right;    /* 오른쪽 끝에 위치 */
+    content: '🙄'
+}
+/* 예매 */
+.gnb ul>li:nth-child(2) .smenu li:hover a::after{
+    content: '👽';
+}
+/* 극장 */
+.gnb ul>li:nth-child(3) .smenu li:hover a::after{
+    content: '💟';
+}
+/* 이벤트&컬쳐 */
+.gnb ul>li:nth-child(4) .smenu li:hover a::after{
+    content: '💜';
+}
+
+/* 영사기 박스 */
+.cam{
+    position: absolute;
+    top: -10px;
+    right: -65px;
+}
+.cam img{
+    width: 50px;
+    transform: rotate(30deg);
+    /* 트랜지션 : 돌아올때 지연있음 */
+    transition: .3s .3s;
+}
+
+/* 오버시 영사기 이미지 회전 */
+.gnb:hover .cam img{
+    transform: rotate(0deg);
+    /* 트랜지션 (오버시 지연없음) */
+    transition: .3s;
+}
+/* 오버시 영사기 빔 이미지 보이기 (빔 쏘는 효과) */
+.gnb:hover .beam{
+    width: 200px;
+    /* 트랜지션 (오버시 지연 있음) */
+    transition: width .3s .3s;
+    /* 애니메이션 */
+    animation: beam-ani .05s linear infinite alternate;
+}
+/* 빔 떨림 애니 */
+@keyframes beam-ani{
+    to{
+        opacity: 0.5;
+    }
+}
+
+/* 빔박스 */
+.beam{
+    position: absolute;
+    top: -16px;
+    right: 5px;
+    width: 165px;   /* 0px */
+    height: 70px;
+    /* outline: 2px dashed yellow; */
+    background: url(../images/bim.png) no-repeat right/auto 100%;
+    z-index: -1;    /* 메뉴&카메라보다 뒤에 오도록 */
+    /* 트랜지션 (돌아올때 지연시간 없음) */
+    transition: width .3s;
+}
+    
+/* 가상요소로 스크린 만들기 */
+.cam::after{
+    content:'';
+    position: absolute;
+    top: -10px;
+    right: 50px;
+    width: 150px;
+    height: 70px;
+    background: url(../images/screen.gif) no-repeat -50% center/auto 80%;
+    z-index: -2;
+    opacity: 0;
+    /* 트랜지션 */
+    transition: opacity .3s;
+}
+
+/* 오버시 스크린 보이기 */
+.gnb:hover .cam::after{
+    opacity: 1;
+    /* 트랜지션 */
+    transition: opacity .3s .6s;
+}
+
 /************ 2. 메인영역 ************/
 .main-area{
     position: relative;
     /* 부모자격 - .screen */
-    height: 788px;
+    /* height: 788px; */
+    /* 높이값 주지 말고 비율박스 만들기 -> aspect-ratio */
+    aspect-ratio: 1200/788;
     /* 극장이미지 배경 */
     background: url(../images/bg.jpg) no-repeat;    /* no-repeat : 반복 안한다고 */
 }
+
 /* 2-1. 스크린 */
 .screen{
     position: absolute;
     /* 부모는? .main-area */
-    top: 136px;
-    left: 257px;
-    width: 701px;
-    height: 397px;
+    top: 17.2%;
+    left: 21.4%;
+    width: 58.5%;
+    height: 50.5%;
     background-color: black;
 }
 /* 유튜브 아이프레임 */
@@ -77,7 +243,7 @@ body * {
 /* 2-2. 포스터 메뉴 */
 .poster-menu{
     position: absolute;
-    width: 100%;
+    width: 65%;
     bottom: 5%;  /* 포스터 위치 밑으로 보냈음 */
     left: 50%;
     transform: translateX(-50%);    /* 가로방향 중앙이동 */
@@ -94,7 +260,7 @@ body * {
 
 /* 포스터 리스트 */
 .poster-menu ul {   /* li : 리스트 */
-    /* float: left; */    /* 블록요소(포스터사진) 옆으로 흐르게 */
+    float: left;    /* 블록요소(포스터사진) 옆으로 흐르게 */
     /* 플렉스박스 */
     display: flex;
     /* 하위요소 사이간격 */
@@ -109,8 +275,8 @@ body * {
 
 /* 포스터 이미지 */
 .poster-menu img{
-    width: 100%;
-    /* height: 170px; */   /* 포스터 크기 */
+    /* width: 100%; */
+    height: 170px;   /* 포스터 크기 */
 }
 
 /* 영화정보박스 : 오버시 올라올 박스 */
@@ -144,15 +310,55 @@ body * {
     height: 100%;
     /* 줄바꿈 방지 */
     white-space: nowrap;
+    /* 글자체 */
+    font-family: 'Cute Font', cursive;
     /* 글자크기 */
-    font-size: 12px;
+    font-size: min(14px, 1.3vw);
     /* 줄간격 */
-    line-height: 2;
+    line-height: 2.5;
     /* 배경 반투명 */
     background-color: #00000098;
 }
 
+/* 영화정보 제목만 글자 변경 */
+.mv-info ol li:first-child{
+    color: aqua;
+    /* 글자크기 */    
+    font-size: min(17px, 1.5vw);
+}
+
 /************ 3. 하단영역 ************/
 .footer-area{
-    height: 100px;
+    /* 플렉스 박스 */
+    display: flex;
+    /* 진행방향 수직정렬(한줄) */
+    align-items: center;
+    gap: 0 20px;
+    padding: 30px;
+
+    /* height: 100px; */
+}
+/* 3-1.하단로고 */
+/* 3-2.회사정보 */
+.co-info address{
+    font-family: 'cute font';
+    font-size: 1.6rem;
+    color: #fff;
+    /* 이탤릭해제 */
+    font-style: normal;
+}
+/* 3-3.SNS */
+.sns-box{
+    /* 플렉스 자식에서 왼쪽마진을
+    auto로 주면 오른쪽 끝으로 이동함 */
+    margin-left: auto;
+}
+.sns-box ol{
+    /* 플렉스박스 */
+    display: flex;
+    gap: 0 10px;
+}
+.sns-box a{
+    font-size: 4rem;
+    color: #fff;
 }
