--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/CSS/common.css
@@ -3,145 +3,194 @@
 /* 도깨비 PJ : 공통 모듈 CSS - common.css */
 /* 공유기능 요소 셋팅 */
 
-/* 0. 전체 레이아웃 영역별 세팅
+/* 0. 전체 레이아웃 영역별 셋팅 */
 /* 1. 상단영역 */
-.top-area {
-    height: 120px;
+.top-area{
+  height: 120px;
 }
 /* 2. 배너영역 */
-.ban-area {
-    position: relative;
-    /* 부모자격 - .cat-box */
-    height: 680px;
+.ban-area{
+  position: relative;
+  /* 부모자격 - .cat-box */
+  height: 680px;
 }
-/* 2.5. 서브파트메뉴 */
-.spart-menu {
-    height: 68px;
+/* 2.5.서브파트메뉴 */
+.spart-menu{
+  height: 68px;
 }
 /* 8. 하단영역 */
-.footer-area {
-    height: 371px;
+.footer-area{
+  height: 371px;
 }
 
 /************* 1. 상단영역 *************/
 /* 메인로고 */
 .mlogo img {
-    margin-top: 39px;
+  margin-top: 39px;
 }
-
-/* TOP 메뉴 */
+/* Top 메뉴 (로그인/회원가입/검색) */
 .top-menu ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
-/* TOP 리스트 */
+/* Top 리스트 (로그인/회원가입/검색) */
 .top-menu ul li {
-    padding: 0 10px;
+  padding: 0 10px;
 }
-/* TOP a링크 */
+/* Top a링크 (메뉴바 위치) */
 .top-menu ul a {
-    font-size: 1.4rem;
-    line-height: 40px;
-    font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 40px;
+  font-weight: bold;
 }
 
-/* GNB 메뉴 */
+/* GNB 메뉴 (메뉴바 위치) */
 .gnb ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 /* GNB 리스트 */
-/* .gnb ul li {} */
+/* .gnb ul li {
+} */
 
 /* GNB a링크 */
-.gnb ul li a {
-    display: block;
-    padding: 0 13px;
+.gnb ul a {
+  display: block;
+  padding: 0 13px;
 
-    font-size: 1.7rem;
-    line-height: 60px;
-    font-weight: bold;
+  font-size: 1.7rem;
+  line-height: 60px;
+  font-weight: bold;
 }
-/* GNB a링크 오버시*/
+/* GNB a링크 오버시 */
 .gnb ul a:hover {
-    color: red;
+  color: red;
 }
 
-/* 상위메뉴 서브가 있는 리스트 선택하기 4~6까지(드라마 연예오락 인사이트)*/
+/* 상위메뉴 서브가 있는 리스트 선택하기
+4~6까지 */
 /* a요소 오버시 커서 변경 */
 .gnb ul > li:nth-child(3) ~ li:nth-child(-n + 6) > a {
-    /* 손가락표시 변경하기 */
-    cursor: default; /* 커서는 오버시 커서모양을 변경하는 속성 */
+  /* 손가락표시 변경하기 */
+  cursor: default;
+  /* 커서는 오버시 커서모양을 변경하는 속성 */
 }
-/* 가상요소로 아래쪽 화살표 넣기 */
+/* 가상요소로 아래쪽 화살표넣기 */
 .gnb ul > li:nth-child(3) ~ li:nth-child(-n + 6) > a::after {
-    content: "v";
-    display: inline-block; /* 트랜스폼은 inline에서는 적용안됨 */
-    font-size: 7px;
-    margin-left: 8px;
-    vertical-align: 3px;
-    transform: scaleX(2);
+  content: "∨";
+  display: inline-block;
+  /* 트랜스폼은 inline에서는 적용안됨! */
+  font-size: 7px;
+  margin-left: 8px;
+  vertical-align: 3px;
+  transform: scaleX(2);
 }
 
 /* 서브메뉴 */
 .smenu {
-    position: absolute;
-    left: 0; /* 부모: 보이는 화면 */
-    width: 100%;
-    z-index: 1;
-    background-color: #fff;
-    max-height: 0px; /* 최대높이값 0 */
-    overflow: hidden; /* 서브메뉴 숨기기 */
-    transition: 0.4s; /* 트랜지션 */
+  position: absolute;
+  left: 0;
+  /* 부모는? 보이는 화면 */
+  width: 100%;
+z-index: 999;
+  background-color: #fff;
+
+  /* 최대높이값 0 */
+  max-height: 0;
+  /* 서브메뉴숨기기 */
+  overflow: hidden;
+  /* 트랜지션 */
+  transition: 0.4s;
 }
 /* 상위메뉴 오버시 서브메뉴 보이기 */
 .gnb > ul > li:hover .smenu {
-    max-height: 50vh;
+  max-height: 50vh;
 }
-/* 서브속박스 */
+/* 서브 속박스 */
 .swrap {
-    width: 60vw;
-    margin: 0 auto;
-    padding: 4.9rem 12.8rem 6rem;
-    white-space: nowrap;
+  width: 60vw;
+  margin: 0 auto;
+  padding: 4.9rem 12.8rem 6rem;
+  white-space: nowrap;
 }
-
 /* ol리스트 */
 .smenu ol {
-    display: flex; /* 플렉스박스 */
-    flex-wrap: wrap; /* 플렉스 랩핑박스 */
-    /* justify-content: center; */
-    /* 플렉스박스 간격속성 : gap(위아래, 양쪽 - 하나만 쓰면 모두세팅) */
-    gap: 1rem 2vw;
+  /* 플렉스박스 */
+  display: flex;
+  /* 플렉스 랩핑박스 */
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* 플렉스박스 간격 속성 : 
+  gap(위아래,양쪽) -> 하나의 값만쓰면 모두셋팅 */
+  gap: 1rem 2vw;
 }
 /* 서브타이틀 */
 .smenu h2 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
-/************* 2. 메인영역 *************/
+/************ 2. 메인영역 ************/
 /* 2-1. 배너영역 */
 
 /* 슬라이드 박스 */
-.slide-box {
+.slide-box{
+  position: relative;
+  /* 부모자격 - 이벤트 커버박스 */
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
+/* 이벤트 커버박스 */
+.evt-cover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+}
+/* 양분박스 aside */
+.evt-cover aside{
+  /* 등분할 */
+  flex: 1;
+  /* 손가락모양 */
+  cursor: pointer;
+}
+/* 버튼요소 */
+.abtn{
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 0 5px #000;
+  z-index: 99;
+  display: none;/* 처음에 숨기기 */
+  /* 따라다니는 버튼요소 오버시 무시하기 */
+  pointer-events: none;
+  /* 트랜지션 */
+  transition: .3s ease-out;
+  /* 트랜스폼 */
+  transform: translate(-50%, -100%);
+}
 /* 슬라이더 */
-.slider {
+.slider{
     position: relative;
-    left: 0; /* 슬라이드 위치이동 초기값 */
-    display: flex; /* 하위 li를 옆으로 흐르게 함 */
+    /* 슬라이드 위치이동 초기값 */
+    left: 0;
+    display: flex;
+    /* 하위 li를 옆으로 흐르게함 */
     width: 100%;
     height: 100%;
 }
-.slider li {
+.slider li{
     flex-basis: 100%;
     flex-shrink: 0;
-    /* 부모크기만큼 옆으로 나가게 하려면 flex-shrink 기본값 1을 0으로 변경한다
+    /* 부모크기만큼 옆으로 나가게 하려면
+    flex-shrink 기본값 1을 0으로 변경한다!
     1의 의미는 자동으로 부모크기에 맞추어 줄어듬
-    0의 의미는 설정된 크기만큼 늘어남 */
+    0의 의미는 설정된 크기만큼 늘어남! */
 
     /* 공통배경설정 */
     background-repeat: no-repeat;
@@ -149,7 +198,6 @@
     background-size: cover;
 }
 /* 슬라이드 01 */
-/* 슬라이드 되게 푸쉬받기 */
 .snum-01 {
     background-image: url(../images/bg_mainvisual2.jpg);
 }
@@ -159,130 +207,154 @@
 .snum-03 {
     background-image: url(../images/bg_main_03.jpg);
 }
-
-/* 캐릭터박스 
--> 캐릭터 속박스가 있는 공간을 확보해준다.*/
-.cat-box {
-    position: absolute;
-    left: 0;
-    bottom: 5%;
-    /* 부모는? .ban-area */
-    width: 100%;
-    /* height: 300px; */
-    outline-color: red;
+/* 블릿박스 */
+.indic-box{
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  width: 450px;
+  height: 5px;
+  z-index: 1;
 }
-/* 캐릭터 속박스 - static한 박스(공간차지..한다고) */
-.cat-inbox {
-    /* 플랙스박스(흘러가게) */
-    display: flex;
-    /* 플랙스 자식 사이간격 */
-    /* gap: 위아래 양쪽 */
-    gap: 0 1vw;
-    /* 가로 최대크기 설정 */
-    max-width: 1360px;
-    /* 가로중앙정렬 */
-    margin: 0 auto;
-    /* 양쪽패딩 */
-    padding: 0 1vw;
+.indic{
+  display: flex;
+  gap: 0 15px;
+}
+.indic li{
+  width: 150px;
+  height: 5px;
+  background-color: #ffffff66;
+}
+/* 가상요소바 */
+.indic li::before{
+  content: '';
+  display: block;
+  width: 0;
+  height: 5px;
+  background-color: #fff;
+}
+/* li.on일 경우 가상요소 width변경 */
+.indic li.on::before{
+  width: 100%;
+  transition: width 3s linear;
+}
+
+
+
+
+/* 캐릭터 박스
+-> 캐릭터 속박스가 있는 공간을 확보해준다! */
+.cat-box{
+  position: absolute;
+  left: 0;
+  bottom: 5%;
+  /* 부모는? .ban-area */
+  width: 100%;
+  /* height: 300px; */
+  outline-color: red;
+
+}
+/* 캐릭터 속박스 - static한 박스임!(공간차지) */
+.cat-inbox{
+  /* 플렉스박스 */
+  display: flex;
+  /* 플렉스자식 사이간격
+  gap: 위아래 양쪽 */
+  gap: 0 1vw;
+  /* 가로최대크기 설정 */
+  max-width: 1360px;
+  /* 가로중앙정렬 */
+  margin: 0 auto;
+  /* 양쪽패딩 */
+  padding: 0 1vw;
 }
 /* 캐릭터 개별박스 등분할 */
-.cat-inbox article {
-    flex: 1;
+.cat-inbox article{
+  flex: 1;
 }
-/* 캐릭터 이미지 박스 */
-.imbx img {
-    width: 100%;
+/* 캐릭터 이미지박스 */
+.imbx img{
+  width: 100%;
 }
-/* 캐릭터 이름 이미지 박스 */
-.iname {
-    display: block;
-    text-align: center;
-    margin-top: -20%; /* 앱솔루트 없이 마진으로 상단이미지와 겹치게 하기
-    %의 기준은 마진 주기 전 박스의 세로 크기를 기준으로 한다. */
+/* 캐릭터 이름이미지 박스 */
+.iname{
+  display: block;
+  margin-top: -19%;
+  /* 앱솔루트없이 마진으로
+  상단이미지와 겹치게하기!
+  %의 기준은 마진주기전 박스의
+  세로 크기를 기준한다! */
+  text-align: center;
 }
-/* 캐릭터 이름 이미지 */
-.iname img {
-    width: 40%;
+/* 캐릭터 이름이미지 */
+.iname img{
+  width: 40%;
 }
-
-/* 마우스 오버시 그림 바꾸기
-1. 두번째 이미지 숨기기
-2. 오버시 두번째 이미지 보이기
-3. 오버시 첫번째 이미지 숨기기 */
-
-/* 내가 한거
--> 내가 한거는 이름박스 위에서만 적용되는거고 강사님꺼는 마우스를 캐릭터 위에 올리기만 해도 적용됨 (범위가 다름) */
-/* .iname img:last-child{
-    display: none;
+/* 두번째 이미지 숨기기 */
+.iname img:last-child{
+  display: none;
 }
-.iname:hover img:last-child{
-    display: inline;
+/* 오버시 두번째 이미지 보이기 */
+.cat-inbox article:hover 
+.iname img:last-child{
+  display: inline;
 }
-
-.iname:hover img:first-child{
-    display: none;
-} */
-
-.iname img:last-child {
-    display: none;
-}
-.cat-inbox article:hover .iname img:last-child {
-    display: inline;
-}
-.cat-inbox article:hover .iname img:first-child {
-    display: none;
+/* 오버시 첫번째 이미지 숨기기 */
+.cat-inbox article:hover 
+.iname img:first-child{
+  display: none;
 }
 
 /* 캐릭터 설명박스 */
 .descbx {
-    height: 0;
-    overflow: auto; /* 넘치는 자식요소 auto일 경우,
-    정해진 크기보다 넘치는 세로 스크롤만 생김 */
-    background: url(../images/eachBG.jpg) no-repeat bottom/cover;
-    /* 트랜지션 */
-    transition: 0.4s ease-in-out;
-}
+  margin-top: 5%;
+  border-radius: 10px 5px 5px 10px;
 
+  height: 0;
+  overflow: auto;
+  /* 넘치는 자식요소 auto일 경우
+  정해진 크기 보다 넘치는 세로 스크롤만 생김! */
+  background: url(../images/eachBG.jpg) no-repeat bottom/cover;
+  /* 트랜지션 */
+  transition: .4s ease-in-out;
+}
 /* 상위 캐릭터 개별박스에 오버시 설명박스 보이기 */
 .cat-inbox article:hover .descbx {
-    /* height: 200px; */
-    padding-top: 55%;
-    /* aspect-ratio: 2/1; */
-    border-radius: 10%;
-    margin-top: 7%
+  padding-top: 55%;
 }
 /* 상위 캐릭터 개별박스에 오버시 이미지박스 트랜지션
-  설명박스와 동일하게 설정하기 */
+설명박스와 동일하게 설정하기 */
 .cat-inbox article .imbx {
-    transition: 0.4s ease-in-out;
+  margin-top: 3%;
+  transition: .4s ease-in-out;
 }
 /* 상위 캐릭터 개별박스에 오버시 이미지박스 마이너스
-  마진으로 위로 올리기 + 캐릭터 타이틀 마진탑 */
+마진으로 위로 올리기 + 캐릭터 타이틀 마진탑도! */
 .cat-inbox article:hover .imbx,
 .cat-inbox article:hover .descbx h3 {
-    margin-top: -55%;
+  margin-top: -55%;
 }
 /* 캐릭터 타이틀 */
-.descbx h3 {
-    margin-top: 0;
-    font-family: "Gugi";
-    /* 글자크기 최대2.4rem, 기타는 2vw */
-    font-size: min(2.4rem, 2vw);
-    font-weight: normal;
-    padding: 15px 10px 5px;
-    letter-spacing: -1px;
-    /* 트랜지션 */
-    transition: margin-top .4s ease-in-out;
+.descbx h3{
+  margin-top: 0;
+  font-family: 'Gugi';
+  /* 글자크기 최대 2.4rem, 기타는 2vw */
+  font-size: min(2.4rem, 2vw);
+  font-weight: normal;
+  padding: 15px 10px 5px;
+  letter-spacing: -1px;
+  /* 트랜지션 */
+  transition: margin-top .4s ease-in-out;
+}
+.descbx p{
+  font-family: 'Single Day','ZCOOL KuaiLe';
+  /* 글자크기 최대 1.8rem, 기타는 1.3vw */
+  font-size: min(1.8rem, 1.3vw);
+  line-height: 1.6;
+  padding: 1.5rem;
+  /* 양쪽정렬 */
+  text-align: justify;
 }
 
-.descbx p {
-    font-family: "Single Day", "ZCOOL KuaiLe";
-    /* 글자크기 최대1.8rem, 기타는 1.3vw */
-    font-size: min(1.8rem, 1.3vw);
-    line-height: 1.4;
-    padding: 1.5em;
-    /* 양쪽정렬 */
-    text-align: justify;
-}
 
 /************* 3. 하단영역 *************/
